# risklens

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
app/: api.py
app/pages/: 1_loan_scoring.py  2_portfolio_loss.py  3_drift_monitoring.py
configs/: bayesian_hierarchical.yaml  pd_logistic.yaml  pd_xgboost.yaml
docs/: data_dictionary.md  model_development_document.md
docs/case_studies/: covid_drift.md
docs/figures/eda/: summary_stats.txt
scripts/: 01_download_data.py  02_build_features.py  03_eda.py  03_train_pd.py  04_train_lgd.py  04_train_xgboost.py  05_calibration_analysis.py  05_fit_survival.py  06_fit_bayesian.py  06_shap_analysis.py  07_build_lgd_data.py  07_compute_drift.py  08_train_lgd.py  09_compute_expected_loss.py
sql/features/: borrower_features.sql  loan_features.sql  vintage_cohorts.sql
src/data/: download.py  splits.py
src/evaluation/: calibration_plots.py
src/features/: borrower.py  loan.py
src/models/: expected_loss.py  lgd.py  pd_logistic.py  pd_xgboost.py
src/risklens/: paths.py
src/risklens/data/: download.py  lgd_data.py  load.py  splits.py
src/risklens/evaluation/: metrics.py  shap_analysis.py
src/risklens/features/: derived.py  leakage_blacklist.py  pipeline.py
src/risklens/models/: bayesian.py  calibration.py  expected_loss.py  lgd.py  pd_logistic.py  pd_xgboost.py  survival.py
tests/: conftest.py  test_calibration.py  test_changepoint.py  test_csi.py  test_data_splits.py  test_expected_loss.py  test_features_pipeline.py  test_lgd.py  test_metrics.py  test_pd_model.py  test_psi.py  test_smoke.py
(+3 files in other folders)
