[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "risklens"
version = "0.1.0"
description = "RiskLens credit risk modeling project"
requires-python = ">=3.11"
dependencies = [
    # Core data
    "pandas>=2.2",
    "numpy>=1.26,<2.0",
    "pyarrow>=15.0",
    "scipy>=1.11",
    
    # Modeling
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "shap>=0.45",
    "lifelines>=0.28",
    "pymc>=5.10",
    "arviz>=0.17",
    
    # App / API
    "streamlit>=1.32",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    
    # Plotting
    "matplotlib>=3.8",
    "seaborn>=0.13"
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "nbstripout>=0.7"
]

[tool.hatch.build.targets.wheel]
packages = ["src/risklens"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
